dist/LineScript-win64-20260616/tests/cases/compile_fail/input_i64_bad_arity.lsc
main() -> i64 do
  declare x = input_i64("a", "b")
  println(x)
  return 0
end
